# HACE_multiagent_evaluation

./: .gitignore  README.md  app.py  frontend.py  labeling_app.py  pyproject.toml  requirements.txt  setup_rag.py
architecture_graphs/: DIAGRAM.md  dashboard_schema_diagram.drawio  frontend_schema_diagram.drawio
crypto/: RAG_KNOWLEDGE.txt
crypto/src/: data_manager.py  predictor.py  trainer.py
evaluation/: dataset.json  judge.py  results_report.csv  run_eval.py
evaluation/accumulated_data/: dataset_unified_results copy.csv  dataset_unified_results.csv  offline_metrics copy.csv  offline_metrics.csv  online_metrics copy.csv  online_metrics.csv
evaluation/baseline/: BASELINE_EVALUATION_GUIDE.md  dataset_baseline_results.csv  dataset_baseline_summary.csv  evaluator.py  metrics.py  run_eval.py  state.py
evaluation/hitl/: analytics.py  golden_dataset.csv  storage.py
evaluation/hybrid/: HYBRID_EVALUATION_GUIDE.md  __init__.py  dataset_hybrid_results.csv  dataset_hybrid_summary.csv  hace_calibration_results.csv  layer1_guardrails.py  layer2_semantic.py  layer3_llm.py  optimization_hace.py  orchestrator.py  run_eval.py  scorer.py
evaluation/llm_j/: LLMJ_EVALUATION_GUIDE.md  dataset.csv  dataset.json  dataset_llmj_results.csv  dataset_results.csv  dataset_summary.csv  judge.py  prompts.py  run_eval.py  state.py
evaluation/metrics_accumulator/: METRICS_ACCUMULATOR.md  __init__.py  dataset.json  logger.py  run_eval_global.py
orchestrator/: agents.py  config.py  graph.py  main.py  prompts.py  state.py  tools.py  utils.py
pages/: 1_dashboard.py
weather/: RAG_KNOWLEDGE.txt
weather/src/: data_manager.py  (+2 more)
(+4 files in other folders)
