[project]
name = "multiagent-evalutation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "black>=25.12.0",
    "chromadb>=1.4.0",
    "flake8>=7.3.0",
    "grandalf>=0.8",
    "joblib>=1.5.3",
    "kagglehub>=0.3.13",
    "langchain>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "mypy>=1.19.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "yfinance>=1.0",
]
